--- a/sass/styles.css
+++ b/sass/styles.css
@@ -5,9 +5,98 @@ h1 {
   text-align: center;
 }
 
+.general {
+  overflow-x: scroll;
+}
+
+.container--flex {
+  display: flex;
+  margin-bottom: 85px;
+}
+
+.card {
+  background-color: white;
+  height: 410px;
+  width: 237px;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: -4px 19px 45px -11px rgba(36, 36, 36, 0.21);
+  -webkit-box-shadow: -4px 19px 45px -11px rgba(36, 36, 36, 0.21);
+  -moz-box-shadow: -4px 19px 45px -11px rgba(36, 36, 36, 0.21);
+}
+
+.card__img {
+  width: 267px;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: -15px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.card--margin {
+  margin-right: 25px;
+}
+
+.card__title {
+  color: black;
+  opacity: 0.5;
+  margin-left: 10px;
+  font-size: 19px;
+}
+
+.card__p1 {
+  color: black;
+  width: 192px;
+  font-size: 22px;
+  margin-left: 10px;
+}
+
+.card__date {
+  color: black;
+  opacity: 0.5;
+  font-size: 15px;
+  margin-left: 10px;
+}
+
+.flex {
+  display: flex;
+}
+
+.card__button {
+  color: black;
+  font-size: 15px;
+  margin-left: 10px;
+}
+
+.card__row {
+  background-color: rgb(255, 255, 255);
+  padding: 9px;
+  margin-left: 20px;
+  width: 23px;
+  height: 12px;
+}
+
+.button--variant {
+  background-color: #ffe24d;
+  padding: 18px 29px;
+  margin-top: 35px;
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  transition: background-color 50s;
+  border: #ffe24d;
+  width: 340px;
+  margin-left: 400px;
+}
+
+.button--variant:hover {
+  background: linear-gradient(90deg, #ffe24d 11.03%, #99cc7e 53.39%, #93e0f1 103.45%);
+}
+
 body {
   margin: 0 auto;
-  width: 555px;
+  width: 1124px;
   font-family: "Roboto", sans-serif;
   color: #222222;
 }
