--- a/sass/partials/_final-button.scss
+++ b/sass/partials/_final-button.scss
@@ -1,14 +1,14 @@
 .button--variant{
   background-color: #ffe24d;
   padding: 18px 29px ;
-  margin-top: 35px;
+  margin-bottom: 20px;
   color: black;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   transition: background-color 50s  ;
-  border: #ffe24d;
-  width: 340px;
-  margin-left: 400px;
+  border: none;
+  width: 275px;
+  margin-left: 420px;
   }
   
   .button--variant:hover {
