--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,4 +1,4 @@
-h1 {
+.general__title {
   margin-top: 110px;
   margin-bottom: 70px;
   font-size: 60px;
@@ -94,52 +94,13 @@ h1 {
   background: linear-gradient(90deg, #ffe24d 11.03%, #99cc7e 53.39%, #93e0f1 103.45%);
 }
 
-body {
+@impor body {
   margin: 0 auto;
   width: 1124px;
   font-family: "Roboto", sans-serif;
   color: #222222;
 }
-
 a {
   text-decoration: none;
   color: #222222;
-}
-
-@media (max-widt: 640px) {
-  .general__title {
-    margin-top: 132px;
-    margin-bottom: 48px;
-    font-size: 25px;
-    text-align: center;
-    margin-right: 746px;
-  }
-  .card__button {
-    margin-left: 176px;
-  }
-}
-@media (min-width: 641px) and (max-width: 960px) {
-  .general__title {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-left: 56px;
-  }
-  .card__button {
-    margin-left: 176px;
-  }
-}
-@media (min-width: 960px) and (max-width: 1024px) {
-  .general__title {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-left: 56px;
-  }
-  .card__button {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-right: 290px;
-  }
 }/*# sourceMappingURL=styles.css.map */
