--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,7 @@
 @import 'partials/title';
 @import 'partials/cards';
 @import 'partials/final-button';
+@import'patials/responsive';
 
 body {
   margin: 0 auto;
@@ -15,48 +16,9 @@ a {
 }
 
 
-@media (max-widt: 640px) {
-  .general__title{
-    margin-top: 132px;
-    margin-bottom: 48px;
-    font-size: 25px;
-    text-align: center;
-    margin-right: 746px;
-  }
-
-  .card__button{
-    margin-left: 176px;
-  }
-}
 
 
-@media  (min-width: 641px) and (max-width: 960px) {
-
-  .general__title {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-left: 56px;
-  }
-
-  .card__button{
-    margin-left: 176px;
-  }
-}
 
 
-@media (min-width: 960px) and (max-width: 1024px) {
-  .general__title {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-left: 56px;
-  }
-.card__button {
-  margin-top: 110px;
-  margin-bottom: 70px;
-  font-size: 57px;
-  margin-right: 290px;
-}
 
-}
+
