--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,8 +1,7 @@
-
 .general__title {
   margin-top: 110px;
+}
 
-@charset "UTF-8";
 h1 {
   margin-top: 50px;
   margin-bottom: 70px;
@@ -121,22 +120,11 @@ h1 {
   transition: background-color 50s;
   border: none;
   width: 275px;
-  margin-left: 420px;
+  margin-left: 438px;
 }
 
 .button--variant:hover {
   background: linear-gradient(90deg, #ffe24d 11.03%, #99cc7e 53.39%, #93e0f1 103.45%);
-}
-
-@impor body {
-  margin: 0 auto;
-  width: 1124px;
-  font-family: "Roboto", sans-serif;
-  color: #222222;
-}
-a {
-  text-decoration: none;
-  color: #222222;
 }
 
 @media (max-widt: 640px) {
@@ -145,21 +133,45 @@ a {
     margin-bottom: 48px;
     font-size: 25px;
     text-align: center;
-    margin-right: 746px;
+    margin-right: 436px;
+  }
+  .container--flex {
+    display: flex;
+    margin-bottom: 85px;
   }
   .card__button {
-    margin-left: 176px;
+    margin-left: 183px;
+  }
+  .button--variant {
+    background-color: #ffe24d;
+    padding: 18px 29px;
+    margin-top: 35px;
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
+    transition: background-color 50s;
+    border: #ffe24d;
+    width: 340px;
+    margin-left: 400px;
   }
 }
 @media (min-width: 641px) and (max-width: 960px) {
   .general__title {
     margin-top: 110px;
     margin-bottom: 70px;
-    font-size: 57px;
-    margin-left: 56px;
+    font-size: 56px;
+    text-align: center;
+    margin-right: 428px;
+  }
+  .container--flex {
+    display: flex;
+    margin-bottom: 85px;
   }
   .card__button {
     margin-left: 176px;
+  }
+  .button--variant {
+    margin-left: 190px;
   }
 }
 @media (min-width: 960px) and (max-width: 1024px) {
@@ -167,12 +179,31 @@ a {
     margin-top: 110px;
     margin-bottom: 70px;
     font-size: 57px;
-    margin-left: 56px;
+    margin-right: 440px;
+  }
+  .container--flex {
+    display: flex;
+    margin-bottom: 85px;
   }
   .card__button {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-right:  290px;
+    margin-top: 33px;
+    margin-bottom: 64px;
+    font-size: 20px;
+    margin-right: 305px;
+    width: 291px;
   }
+  .button--variant {
+    margin-left: 182px;
+  }
+}
+body {
+  margin: 0 auto;
+  width: 1146px;
+  font-family: "Roboto", sans-serif;
+  color: #222222;
+}
+
+a {
+  text-decoration: none;
+  color: #222222;
 }/*# sourceMappingURL=styles.css.map */
