--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,11 +1,11 @@
 @import 'partials/title';
 @import 'partials/cards';
 @import 'partials/final-button';
-@import'patials/responsive';
+@import 'partials/responsive';
 
 body {
   margin: 0 auto;
-  width: 1124px;
+  width: 1146px;
   font-family: 'Roboto', sans-serif;
   color: #222222;
 }
@@ -14,51 +14,3 @@ a {
   text-decoration: none;
   color: #222222;
 }
-
-
-@media (max-widt: 640px) {
-  .general__title{
-    margin-top: 132px;
-    margin-bottom: 48px;
-    font-size: 25px;
-    text-align: center;
-    margin-right: 746px;
-  }
-
-  .card__button{
-    margin-left: 176px;
-  }
-}
-
-
-@media  (min-width: 641px) and (max-width: 960px) {
-
-  .general__title {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-left: 56px;
-  }
-
-  .card__button{
-    margin-left: 176px;
-  }
-}
-
-
-@media (min-width: 960px) and (max-width: 1024px) {
-  .general__title {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-left: 56px;
-  }
-  .card__button {
-    margin-top: 110px;
-    margin-bottom: 70px;
-    font-size: 57px;
-    margin-right: 290px;
-  }
-
-}
-
